@@ -1,5 +1,7 @@
 Merge:
 This should merge
+Merge:
+This should also merge
 f
  1=1 a=top.t 1=1 1=1 b=top.t 1=1
  pre
